fix: shift equip overlay up (top 38%) to align with avatar torso

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -656,7 +656,7 @@ input:focus, select:focus {
   position: absolute;
   width: 65%;
   height: 65%;
-  top: 50%;
+  top: 38%;
   left: 50%;
   transform: translate(-50%, -50%);
   object-fit: contain;
